# anne-key

./: .travis.yml  Cargo.toml  Makefile  openocd.gdb  rust-toolchain
.github/workflows/: ci.yml
scripts/: generate_dfu.sh  install.sh
src/: action.rs  bluetooth.rs  debug.rs  keyboard.rs  layout.rs  led.rs  lib.rs  main.rs  theme.rs
src/usb/: descriptors.rs  mod.rs
